tests/compiler/jsxUnicodeName/index.tsx
<\u{2F804}></\u{2F804}>
//~^ ERROR: Unicode escape sequence cannot appear here.
//~| ERROR: Unicode escape sequence cannot appear here.
